<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <moe.starrys.game_engine.GLES3JNIView
        android:id="@+id/GLES3JNIView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#EB838E8E"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:cropToPadding="false"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_move_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
        android:focusable="true"
        android:contentDescription="@string/btn_move_up_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_move_center"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
        android:focusable="true"
        android:contentDescription="@string/btn_move_down_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_move_center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        app:useCompatPadding="false"
        android:focusable="true"
        android:contentDescription="@string/btn_move_left_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_move_center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        android:focusable="true"
        android:contentDescription="@string/btn_move_right_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="80"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        android:tint="#3E3E3E"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/GLES3JNIView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:focusable="true"
        android:contentDescription="@string/btn_move_center_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_move_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="80"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        android:tint="#3E3E3E"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btm_move_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="@+id/GLES3JNIView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_stat_name"
        android:focusable="true"
        android:contentDescription="@string/btn_move_jump_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btm_move_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="#EB838E8E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        app:srcCompat="@drawable/ic_baseline_directions_run_24"
        android:focusable="true"
        android:contentDescription="@string/btm_move_run" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB838E8E"
        android:clickable="true"
        android:contentDescription="@string/btn_light_desc"
        android:focusable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/ic_baseline_highlight_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_texture_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:backgroundTint="#EB838E8E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_light"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/ic_baseline_photo_library_24" />


</androidx.constraintlayout.widget.ConstraintLayout>